added session storage functionality - added a new service session service that will provide the said service to all components - added code to accomodate for that service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="left-segment">
         <div class="main-form">
             <app-progress-bar></app-progress-bar>
-            <!-- <app-personaldetails></app-personaldetails> -->
+            <app-personaldetails></app-personaldetails>
             <app-personal-summary></app-personal-summary>
             <app-experience></app-experience>
             <app-education></app-education>
