--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -9,7 +9,7 @@
                     <div class="unit ">
                         <label for="courseTitle">Title</label>
                         <input type="text" class="form-control" id="courseTitle" placeholder="e.g. The Essence of Computer Science – C++ for People in a Hurry"
-                            formControlName="course">
+                            formControlName="title">
                     </div>
                     <div class="unit">
                         <label for="courseInstitution">Institution</label>
