--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,8 @@
     
     <div class="right-segment">
         <div class="main-preview-window">
-                <app-plain-template></app-plain-template>
+                <!-- <app-plain-template></app-plain-template> -->
+                <app-generic-template></app-generic-template>
             </div>
         </div>
     </div>
