--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -13,10 +13,9 @@
             <div class="unit">
                 <div class="photo-upload ">
                     <label class="photo-label" for="photo-input">Photo
-                        <!-- <img class ="img-fluid" src="../../assets/PhotoUploadButton.png"  /> -->
+                        <img class ="img-fluid" src="../../assets/PhotoUploadButton.png"  />
                     </label>
-                    <input id="photo-input" type="file" accept="image/x-png,image/jpeg" formControlName="photo" />
-
+                    <input id="photo-input" type="file" accept="image/x-png,image/jpeg" formControlName="photo">
                 </div>
 
             </div>
