--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -25,11 +25,11 @@
                         <label for="proficiency">Experience Level</label>
                         <select class="form-control" id="experienceLevel" 
                         formControlName="experienceLevel" required>
-                            <option selected value='"Novice"'>Novice</option>
-                            <option value='"Beginner"'>Beginner</option>
-                            <option value='"Skillfull"'>Skillfull</option>
-                            <option value='"Experienced"'>Experienced</option>
-                            <option value='"Expert"'>Expert</option>
+                            <option selected value='1'>Novice</option>
+                            <option value='2'>Beginner</option>
+                            <option value='3'>Skillfull</option>
+                            <option value='4'>Experienced</option>
+                            <option value='5'>Expert</option>
                         </select>
                     </div>
                 </div>
