--- a/src/app/progress-bar/progress-bar.component.css
+++ b/src/app/progress-bar/progress-bar.component.css
@@ -1,14 +1,13 @@
 .progress-container{
-
-    padding:0.3rem;
+    padding-bottom:0.3rem;
     top:0; left:0;
     position: sticky;
-    background-color: aliceblue;
-
+    background-color: white;
+    margin-bottom: 0.5rem;
  }
 
 .progress-line {
-    background-color: aliceblue;
+    background-color: white;
     height: 0.3rem;
     border-radius: 1rem;
 
