--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
         </div>
     </div> 
     
-    <div class="right-segment">
+    <div class="right-segment p-3">
         <div class="main-preview-window">
                 <!-- <app-plain-template></app-plain-template> -->
                 <app-generic-template></app-generic-template>
