--- a/src/app/resume-templates/generic-template/generic-template.component.html
+++ b/src/app/resume-templates/generic-template/generic-template.component.html
@@ -1,4 +1,5 @@
-<div id="preview-window" class="bg-light m-3 rounded">
+<div class = "preview-container">
+<div id="preview-window" class="bg-light m-3 rounded ">
   <div class="container p-3">
     <div class="row">
       <div class="col-md-8">
@@ -87,4 +88,5 @@
     </div>
   </div>
 </div>
-<button class="btn btn-outline-primary" (click)="toPdf()">Download</button>
+<button class="download btn btn-primary" (click)="toPdf()">Download</button>
+</div>
