--- a/src/app/resume-templates/generic-template/generic-template.component.html
+++ b/src/app/resume-templates/generic-template/generic-template.component.html
@@ -1,82 +1,89 @@
-<div id="preview-window" class="bg-light m-3 rounded">
-  <div class="container p-3">
-    <div class="row">
-      <div class="col-md-8">
-        <h1>{{ personalDetails.value.firstName }} {{
+<div id="preview-window" class="bg-light m-4 rounded">
+  <div class="container p-4">
+    <div class="row mb-5">
+      <div class="col-md-9">
+        <h1 class="text-dark">{{ personalDetails.value.firstName }} {{
           personalDetails.value.lastName }}</h1>
-        <p>{{ personalDetails.value.address }}, {{ personalDetails.value.city}}, {{ personalDetails.value.country }}</p>
-        <p>(+251) {{ personalDetails.value.phone }}</p>
-        <p>{{ personalDetails.value.email }}</p>
+        <p class="m-0 text-secondary">{{ personalDetails.value.address }},
+          {{personalDetails.value.city}}, {{ personalDetails.value.country }}</p>
+        <p class="m-0 text-secondary">{{ personalDetails.value.email }}</p>
+        <p class="m-0 text-secondary">(+251) {{ personalDetails.value.phone }}</p>
       </div>
-      <div class="col-md-4">
-        <img src="https://via.placeholder.com/150" alt="John Doe">
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="row">
-      <div class="col-md-4">
-        <h3>Summary</h3>
-      </div>
-      <div class="col-md-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-          condimentum enim id quam malesuada, quis sagittis nibh faucibus. Proin
-          a est et tellus feugiat commodo.</p>
+      <div class="col-md-3 m-auto">
+        <img src="https://via.placeholder.com/150" alt="John Doe"
+          class="img-fluid rounded">
       </div>
     </div>
 
-    <hr>
+    <!-- <hr class="my-4"> -->
 
-    <div class="row">
-      <div class="col-md-4">
-        <h3>Education</h3>
+    <div class="row mt-2 mb-2">
+      <div class="col-md-3">
+        <h2 class="text-dark">Summary</h2>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-9 pl-5 m-auto">
+        <p class="text-secondary text-justify">{{ this.professionalSummary.value.personalSummary }}</p>
+      </div>
+    </div>
+
+    <!-- <hr class="my-2"> -->
+
+    <div class="row mb-2">
+      <div class="col-md-3">
+        <h2 class="text-dark">Education</h2>
+      </div>
+      <div class="col-md-9 pl-5 m-auto">
         <div *ngFor="let education of educations.controls; let i= index">
-          <h4>{{ education.value.degree}}, {{ education.value.school }}, {{
-            education.value.city }}</h4>
-          <p>Graduated: {{ education.value.endDate }}</p>
-          <p>{{ education.value.description }}</p>
+          <h4 class="text-secondary">{{ education.value.degree}}, {{
+            education.value.school }}, {{ education.value.city }}</h4>
+          <p class="text-secondary">Graduated: {{ education.value.endDate }}</p>
+          <p class="text-secondary text-justify">{{ education.value.description
+            }}</p>
         </div>
       </div>
     </div>
 
-    <hr>
+    <!-- <hr class="my-2"> -->
 
-    <div class="row">
-      <div class="col-md-4">
-        <h3>Experience</h3>
+    <div class="row mb-2" id="experiences-section">
+      <div class="col-md-3">
+        <h2 class="text-dark">Experience</h2>
       </div>
-      <div class="col-md-8">
-        <h4>Software Engineer, ABC Company</h4>
-        <p>June 2019 - Present</p>
-        <ul>
-          <li>Developed new features for a web-based application using React,
-            Node.js, and MongoDB</li>
-          <li>Improved performance and scalability of the application by
-            implementing caching and optimizing database queries</li>
-          <li>Collaborated with product managers and designers to prioritize and
-            plan development tasks</li>
-        </ul>
-        <h4>Intern, DEF Company</h4>
-        <p>May 2018 - August 2018</p>
-        <ul>
-          <li>Assisted with testing and debugging of a mobile application using
-            Java and Android Studio</li>
-          <li>Contributed to the development of new features for the application</li>
-          <li>Participated in code reviews and team meetings</li>
-        </ul>
+      <div class="col-md-9 pl-5 m-auto">
+        <div *ngFor="let experience of experiences.controls">
+          <h4 class="text-secondary">{{ experience.value.jobTitle }}, {{
+            experience.value.employer }}</h4>
+          <p class="text-secondary">{{ experience.value.startDate }} - Present</p>
+          <p class="justify-content text-justify"> {{
+            experience.value.description }} </p>
+        </div>
       </div>
     </div>
 
-    <hr>
+    <!-- <hr class="my-2"> -->
 
-    <div class="row">
-      <div class="col-md-4">
+    <div class="row mb-2" id="experiences-section">
+      <div class="col-md-3">
+        <h2 class="text-dark">Experience</h2>
+      </div>
+      <div class="col-md-9 pl-5 m-auto">
+        <div *ngFor="let experience of experiences.controls">
+          <h4 class="text-secondary">{{ experience.value.jobTitle }}, {{
+            experience.value.employer }}</h4>
+          <p class="text-secondary">{{ experience.value.startDate }} - Present</p>
+          <p class="justify-content text-justify"> {{
+            experience.value.description }} </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- <hr class="my-2"> -->
+
+    <div class="row mb-2">
+      <div class="col-md-3">
         <h3>Skills</h3>
       </div>
-      <div class="col-md-8">
+      <div class="col-md-9 pl-5 m-auto">
         <ul>
           <li *ngFor="let skill of skills.controls">
             {{ skill.value.skillName }} {{ skill.value.experienceLevel }}
