--- a/src/app/resume-templates/generic-template/generic-template.component.html
+++ b/src/app/resume-templates/generic-template/generic-template.component.html
@@ -1,5 +1,5 @@
 <div id="preview-window" class="bg-light m-4 rounded">
-  <div class="container p-4">
+  <div class="preview-container p-4">
     <div class="row mb-5">
       <div class="col-md-9">
         <h1 class="text-dark">{{ personalDetails.value.firstName }} {{
