added fine changes

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,12 +8,11 @@
 
 }
 .right-segment{
-    /* margin: 0.5rem; */
     flex: 1 1 1rem;
-    /* border: 1px solid black; */
     display: flex;
     justify-content: center;
-
+    position: sticky;
+    top:0px;
     background-color: #0c264c;
 
 }
