some experimental features

--- a/src/app/resume-templates/generic-template/generic-template.component.css
+++ b/src/app/resume-templates/generic-template/generic-template.component.css
@@ -1,8 +1,10 @@
-#preview-window {
+.container {
+  position: sticky;
+  top: 0px;
 }
 
 .preview-container {
-  max-height:86vh;
+  max-height:87vh;
   overflow-y: scroll;
   position: sticky;
   top:0px;
