--- a/src/app/hobbies/hobbies.component.html
+++ b/src/app/hobbies/hobbies.component.html
@@ -2,7 +2,7 @@
 <form [formGroup]="hobbiesForm">
   <div class="unit">
     <label for="hobbies">What do you like?</label>
-    <textarea type="text" placeholder="e.g. Reading Spaceopera Novels" class="form-control" id="hobbies"
+    <textarea  rows= "5" type="text" placeholder="e.g. Reading Spaceopera Novels" class="form-control" id="hobbies"
       formControlName="hobbies"></textarea>
   </div>
 </form>
