--- a/src/app/personaldetails/personaldetails.component.html
+++ b/src/app/personaldetails/personaldetails.component.html
@@ -39,8 +39,7 @@
             </div>
             <div class="unit">
                 <label for="lastname">Last Name</label><br>
-                <input type="text" class="form-control" placeholder="e.g.
-                    Kebede" formControlName="lastName">
+                <input type="text" class="form-control" placeholder="e.g. Kebede" formControlName="lastName">
             </div>
         </div>
 
