--- a/src/app/extra-curricular-activities/extra-curricular-activities.component.css
+++ b/src/app/extra-curricular-activities/extra-curricular-activities.component.css
@@ -12,9 +12,10 @@
     height: calc(2.25em + 0.75rem + 2px);
   }
   
-  #experienceDescription{
+  #extraCurricularActivityDescription{
     background-color: rgb(239, 242, 249);
   }
+
   
   @media (max-width: 550px) {
     .personal-row{
