--- a/src/app/resume-templates/generic-template/generic-template.component.css
+++ b/src/app/resume-templates/generic-template/generic-template.component.css
@@ -1,44 +1,26 @@
 
 #preview-window {
-    height:45rem;
+    height:38rem;
   overflow-y: scroll;
    }
-
-  
 
 .container {
   position: sticky;
   top: 0px;
   width:100%;
 
-
 }
 
 .preview-container {
-  max-height:87vh;
-  overflow-y: scroll;
   position: sticky;
   top:0px;
-  margin-left: auto;
-
+  width:100%;
 }
 
-.preview-container::-webkit-scrollbar  {
-    width: 0.35rem;
-  }
-  
 
-.preview-container::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 0.25rem;
-  }
-   
-  
-.preview-container::-webkit-scrollbar-thumb{
-    background: var(--primary); 
-    border-radius: 0.25rem;
-  }
-  
+.button {
+  position: sticky;
+}
   
   #preview-window::-webkit-scrollbar  {
     width: 0.35rem;
@@ -52,6 +34,6 @@
    
   
   #preview-window::-webkit-scrollbar-thumb{
-    background: white; 
+    background: var(--primary); 
     border-radius: 0.25rem;
   }
